--- a/src/diff.css
+++ b/src/diff.css
@@ -156,3 +156,14 @@ td[colspan="4"].diff-widget-content .split-widget-new {
 .diff-decoration-content {
   background-color: transparent;
 }
+
+.search-match {
+  background-color: rgba(250, 204, 21, 0.4);
+  border-radius: 2px;
+}
+
+.search-match-current {
+  background-color: rgba(251, 146, 60, 0.6);
+  border-radius: 2px;
+  outline: 1px solid rgba(251, 146, 60, 0.8);
+}
