fix: disable overscroll bounce to hide WebView behavior
Add overscroll-behavior: none to html and body elements to prevent
the elastic bounce effect when scrolling in non-scrollable areas.

--- a/src/index.css
+++ b/src/index.css
@@ -73,11 +73,13 @@
 html {
   background-color: rgb(var(--ctp-base));
   color: rgb(var(--ctp-text));
+  overscroll-behavior: none;
 }
 
 body {
   background-color: rgb(var(--ctp-base));
   color: rgb(var(--ctp-text));
+  overscroll-behavior: none;
   font-family: 'Geist', system-ui, -apple-system, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
